# petstore-client-generator

./: README.md  pyproject.toml
petstore/: __main__.py  generator.py  model.py  parser.py
templates/: petstore_client.py.jinja
